Atualizacao com erros na segunda pagina

--- a/assets/css/pokemonInfo.css
+++ b/assets/css/pokemonInfo.css
@@ -81,3 +81,12 @@
     margin-bottom: .25rem;
     background-color: #678fee;
 }
+
+.btnLoadPokemonInformation {
+    outline: none;
+    border: none;
+}
+
+.btnPokemonInfo {
+    outline: none;
+}
